--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <nav class="navigation">
             <a href="about.html" class="navbar-item">
-                Обо мне
+                oбо мне
             </a>
             <a href="psychotherapy.html" class="navbar-item">
                 о психотерапии
@@ -57,14 +57,15 @@
     <!-- здесь начинается меняющийся контент -->
     <div class="wrapper_intro columns">
         <div class="column">
-        <div class="wrapper_intro__img">
+            <div class="wrapper_intro__img">
+            </div>
+            <div class="wrapper_intro__text">
+                <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
+                <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное –
+                    решить
+                    ее.</p>
+            </div>
         </div>
-        <div class="wrapper_intro__text">
-            <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
-            <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное – решить
-                ее.</p>
-        </div>
-    </div>
     </div>
     <div class="wrapper_about_me columns">
         <div class="wrapper_about_me__ava column">
@@ -88,78 +89,116 @@
                 психотерапии. Консультирую взрослых и подростков.</p>
         </div>
     </div>
-    <h2 class="wrapper_reasons_to_me__h2  subtitle">Причины, по которым вам имеет смысл обратиться именно
-        ко мне:</h2>
-    <div class="wrapper_reasons_to_me columns is-2">
-       
-        <div class="wrapper_reasons_to_me_wrap column">
-            <div class="wrapper_reasons_to_me__card">
-                <div class="card_img dark"></div>
-
-            </div>
-        </div>
-            <div class="wrapper_reasons_to_me__card column">
-                <div class="card_img main_couple"></div>
-
-            </div>
-            <div class="wrapper_reasons_to_me__card column">
-                <div class="card_img main_girls"></div>
-
-            </div>
-        </div>
-        <div class="wrapper_reasons_to_me_text columns is-1">
-            <div class="column wrapper_reasons_to_me_text__p">
-            <p>
-                
-               <div> Депрессивные состояния;</div>
-               <div>Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);</div> 
-                <div>Панические атаки.</div> 
-            </p>
-        </div>
-        <div class="column wrapper_reasons_to_me_text__p">
-            <p>
-               <div>Трудности с построением близких и доверительных отношений; </div> 
-                <div>Эмоциональная зависимость; </div> 
-                <div>Болезненный разрыв отношений. </div> 
-            </p>
-        </div>
-        <div class="column wrapper_reasons_to_me_text__p">
-            <p> 
-               <div>Эмоциональная пустота; </div> 
-               <div>потеря смысла жизни; </div> 
-                <div>проблемы с самоопределением и поиском собственного пути; </div> 
-                <div> экзистенциальные вопросы. </div>
-            </p>
-        </div>
+    <div class="column is-full">
+        <h2 class="wrapper_reasons_to_me__h2   has-text-centered">Причины, по которым вам имеет смысл обратиться именно
+            ко мне:</h2>
     </div>
+    <div class="wrapper_reasons_to_me columns">
+
+        <div class="wrapper_reasons_to_me__card column">
+            <div class="card_img dark"></div>
+            <div class=" wrapper_reasons_to_me_text__p">
+                <div>Трудности с построением близких и доверительных отношений; </div>
+                <div>Эмоциональная зависимость; </div>
+                <div>Болезненный разрыв отношений. </div>
+            </div>
+        </div>
+        <div class="wrapper_reasons_to_me__card column">
+            <div class="card_img main_couple"></div>
+            <div class=" wrapper_reasons_to_me_text__p">
+
+                <div>Трудности с построением близких и доверительных отношений; </div>
+                <div>Эмоциональная зависимость; </div>
+                <div>Болезненный разрыв отношений. </div>
+            </div>
+
+        </div>
+        <div class="wrapper_reasons_to_me__card column">
+            <div class="card_img main_girls"></div>
+            <div class="wrapper_reasons_to_me_text__p">
+                <div>Эмоциональная пустота; </div>
+                <div>Потеря смысла жизни; </div>
+                <div>Проблемы с самоопределением и поиском собственного пути; </div>
+                <div> Экзистенциальные вопросы. </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- <div class="wrapper_reasons_to_me_text columns is-1">
+        <div class="column wrapper_reasons_to_me_text__p">
+            <p>
+
+                <div> Депрессивные состояния;</div>
+                <div>Страхи, тревоги, фобии (в том числе аэрофобия, социофобия, клаустрофобия);</div>
+                <div>Панические атаки.</div>
+            </p>
+        </div>
+        <div class="column wrapper_reasons_to_me_text__p">
+            <p>
+                <div>Трудности с построением близких и доверительных отношений; </div>
+                <div>Эмоциональная зависимость; </div>
+                <div>Болезненный разрыв отношений. </div>
+            </p>
+        </div>
+        <div class="column wrapper_reasons_to_me_text__p">
+            <p>
+                <div>Эмоциональная пустота; </div>
+                <div>Потеря смысла жизни; </div>
+                <div>Проблемы с самоопределением и поиском собственного пути; </div>
+                <div> Экзистенциальные вопросы. </div>
+            </p>
+        </div>
+    </div> -->
     <!-- здесь индивидуальная часть сайта заканчивается -->
 
 
-    <footer class="footer">
-        <div class="wrap_footer_head">
-            <h3 class="wrap_footer_head_h3">Форма обратной связи</h3>
-            <h5 class="wrap_footer_head_h5">Здесь можно договориться о встрече или задать интересующий вас вопрос</h5>
+    <!-- <div class="columns"> -->
+    <footer>
+        <div class="wrap_footer_head column is-full">
+            <h3 class="wrap_footer_head_h3 title has-text-centered">Форма обратной связи</h3>
+            <h5 class="wrap_footer_head_h5 subtitle has-text-centered">Здесь можно договориться о встрече или задать
+                интересующий вас вопрос</h5>
         </div>
-        <div class="form_wrap">
-            <form action="index.php" method="post">
-                <div class="form_first_group">
-                    <input type="text" name="name" maxlength="15" placeholder="&#xf007; Ваше имя" required>
-                    <input type="email" name="email" maxlength="30" placeholder="&#xf0e0;   Ваша почта" required>
-                    <input type="tel" name="telephone" maxlength="15" placeholder="&#xf095;    Ваш номер" required>
+        <div class="columns main_form">
+            <div class="column is-1"></div>
+            <div class="field column  is-5">
+                <div class="control has-icons-left input_first">
+                    <input class="input" type="text" placeholder="Ваше имя" maxlength="15" required>
+                    <span class="icon is-small is-left">
+                        <i class="fas fa-user"></i>
+                    </span>
                 </div>
-                <div class="form_wrap_text_wrap">
-                    <textarea name="message" id="texta" rows="8" cols="40" placeholder="Тема обращения"
-                        required></textarea>
-                    <input type="submit" value="отправить">
+                <div class="control has-icons-left input_first">
+                    <input class="input" type="text" placeholder="Ваша почта" maxlength="30" required>
+                    <span class="icon is-small is-left">
+                        <i class="fas fa-envelope"></i>
+                    </span>
                 </div>
-            </form>
+                <div class="control has-icons-left input_first">
+                    <input class="input" type="text" placeholder="Ваша телефон" maxlength="15" required>
+                    <span class="icon is-small is-left">
+                        <i class="fas fa-mobile-alt"></i>
+                    </span>
+                </div>
+            </div>
+            <!-- <div class="is-one-fifth column"></div> -->
+            <div class="column is-5">
+                <textarea class="textarea" name="message" id="texta" rows="8" cols="40" placeholder="Тема обращения"
+                    required></textarea>
+                <a class="button is-primary">
+                    Submit
+                </a>
+            </div>
         </div>
-        <div class="footer_low_wrapper">
-            <div class="text_right">
+
+        <!-- </div> -->
+        <div class="footer_low_wrapper columns">
+            <div class="text_right column is-four-fifths">
                 <p> &copy; 2018 yakupoff </p>
                 <p>All Rights Reserved</p>
             </div>
-            <div class="social_icons">
+
+            <div class="social_icons column is-offset-1">
                 <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
                 <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
                 <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img
