--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="container">
-        <nav class="navigation">
+        <nav class="navigation navbar">
             <a href="about.html" class="navbar-item">
                 oбо мне
             </a>
@@ -175,7 +175,7 @@
                     </span>
                 </div>
                 <div class="control has-icons-left input_first">
-                    <input class="input" type="text" placeholder="Ваша телефон" maxlength="15" required>
+                    <input class="input" type="text" placeholder="Ваш телефон" maxlength="15" required>
                     <span class="icon is-small is-left">
                         <i class="fas fa-mobile-alt"></i>
                     </span>
@@ -183,10 +183,10 @@
             </div>
             <!-- <div class="is-one-fifth column"></div> -->
             <div class="column is-5">
-                <textarea class="textarea" name="message" id="texta" rows="8" cols="40" placeholder="Тема обращения"
+                <textarea class="textarea" name="message" id="texta" rows="7" cols="40" placeholder="Тема обращения"
                     required></textarea>
-                <a class="button is-primary">
-                    Submit
+                <a class="button is-primary is-pulled-right">
+                    Отправить
                 </a>
             </div>
         </div>
@@ -198,7 +198,7 @@
                 <p>All Rights Reserved</p>
             </div>
 
-            <div class="social_icons column is-offset-1">
+            <div class="social_icons column">
                 <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
                 <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
                 <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img
