--- a/alter_app/method.html
+++ b/alter_app/method.html
@@ -66,94 +66,114 @@
 
 
     <!-- здесь начинается меняющийся контент -->
-    <div class="method_wrapper_first">
-        <h3 class="psy_in_our_life__h3 title ">
-            Когнитивно-поведенческая психотерапия
-        </h3>
-        <p class="psy_in_our_life__p">
-            Во главе угла когнитивно-поведенческого подхода стоят мысли человека и его поведение.
-        </p>
-        <p class="psy_in_our_life__p">
-            В нашей психической деятельности есть три основных аспекта: мышление, эмоции и поведение. Они тесно
-            взаимосвязаны, и изменение одного часто влечёт за собой изменение двух других. Если мы меняем способ
-            мышления,
-            иначе думаем о ситуации и относимся к ней, то трансформируется и наша эмоциональная реакция, а вслед за этим
-            —
-            поведение.
-        </p>
-        <p class="psy_in_our_life__p">
-            Мы постоянно думаем — человеческий мозг устроен таким образом, что каждую минуту в голове появляются сотни
-            различных мыслей: какие-то из них нами осмысляются, а какие-то остаются в глубинах подсознания. Наряду с
-            явными, осознаваемыми, существуют так называемые автоматические мысли — большую часть времени мы их не
-            отслеживаем, но принимаем за чистую монету, хотя они зачастую искажают реальное положение дел, порождая
-            глубинные убеждения и установки, которые могут стать источником страданий и переживаний.
-        </p>
-        <p class="psy_in_our_life__p">
-            Плохая новость в том, что подобные убеждения и установки мешают нам жить, но есть и хорошая — они были
-            сформированы, а значит, от них можно избавиться. Навык работы со своими мыслями, убеждениями и установками
-            можно развить и натренировать.
-        </p>
-    </div>
-    <div class="method_wrapper_second">
-        <div class="method_wrapper_second__quote">
-            <p>«БУДЬТЕ ВНИМАТЕЛЬНЫ К ВАШИМ МЫСЛЯМ,</p>
-            <p>ОНИ — НАЧАЛО ВАШИХ ПОСТУПКОВ»</p>
-            <p>ЛАО ДЗЫ</p>
+    <div class="method_wrapper_first columns is-size-5-desktop column is-centered">
+        <div class="column">
+            <h3 class="psy_in_our_life__h3 title ">
+                Когнитивно-поведенческая психотерапия
+            </h3>
+            <p class="psy_in_our_life__p ">
+                Во главе угла когнитивно-поведенческого подхода стоят мысли человека и его поведение.
+            </p>
+            <p class="psy_in_our_life__p">
+                В нашей психической деятельности есть три основных аспекта: мышление, эмоции и поведение. Они тесно
+                взаимосвязаны, и изменение одного часто влечёт за собой изменение двух других. Если мы меняем способ
+                мышления,
+                иначе думаем о ситуации и относимся к ней, то трансформируется и наша эмоциональная реакция, а вслед за
+                этим
+                —
+                поведение.
+            </p>
+            <p class="psy_in_our_life__p">
+                Мы постоянно думаем — человеческий мозг устроен таким образом, что каждую минуту в голове появляются
+                сотни
+                различных мыслей: какие-то из них нами осмысляются, а какие-то остаются в глубинах подсознания. Наряду с
+                явными, осознаваемыми, существуют так называемые автоматические мысли — большую часть времени мы их не
+                отслеживаем, но принимаем за чистую монету, хотя они зачастую искажают реальное положение дел, порождая
+                глубинные убеждения и установки, которые могут стать источником страданий и переживаний.
+            </p>
+            <p class="psy_in_our_life__p">
+                Плохая новость в том, что подобные убеждения и установки мешают нам жить, но есть и хорошая — они были
+                сформированы, а значит, от них можно избавиться. Навык работы со своими мыслями, убеждениями и
+                установками
+                можно развить и натренировать.
+            </p>
         </div>
     </div>
-    <div class="method_wrapper_third">
-        <p class="psy_in_our_life__p">При данном подходе психотерапевт помогает вам обратиться к своему сознанию и
-            освободиться от стереотипного,
-            предвзятого, негибкого мышления, которое так или иначе влияет на настроение и поведение.</p>
-        <p class="psy_in_our_life__p">Психотерапевт не будет учить вас, как думать правильно, а как неправильно. Он
-            будет направлять, помогая
-            разобраться, что с вами происходит, как устроены ваши проблемы, какие мысли и действия приводят к их
-            возникновению, как ваш тип мышления влияет на различные ситуации и жизненные сценарии.</p>
-        <p class="psy_in_our_life__p">В некоторых случаях, помимо работы с мышлением, целесообразно проводить так
-            называемые поведенческие
-            эксперименты, в ходе которых психотерапевт помогает переживать пугающие и болезненные для вас ситуации в
-            реальном времени. Это бывает актуально при различных фобиях, когда вам необходима помощь в проверке своих
-            гипотез об объекте страха.</p>
-        <p class="psy_in_our_life__p">
-            Когнитивно-поведенческая терапия не преследует цель исключить все негативные мысли и переживания: очевидно,
-            что они, так же как и позитивные, являются важной частью нашей жизни и помогают осознать потенциальные
-            проблемы, требующие решения. Главная задача когнитивно-поведенческой терапии — избавиться от разрушительных
-            убеждений и установок, которые могут мешать жить счастливо и реализовать себя так, как нам бы этого
-            хотелось.
-        </p>
-    </div>
-    <div class="method_wrapper_fourth">
-
-        <div class="method_three_methods">
-            <img src="img/about_method_.png" alt="сложные мысли">
-            <div class="method_three_methods_second">
-                <h5 class="method_three_methods__h5">
-                    Три основных принципа <br>
-                    когнитивно-поведенческой психотерапии:
-                </h5>
-                <ul class="method_first__list">
-                    <li>наши мысли влияют на наше поведение;</li>
-                    <li>мы можем развить навык отслеживания мыслей и работать над их изменением;</li>
-                    <li>изменив мышление, можно изменить что-либо в поведении. </li>
-                </ul>
+    <div class="method_wrapper_second columns ">
+        <div class="column">
+            <div class="method_wrapper_second__quote is-size-4-desktop is-centered">
+                <p>«БУДЬТЕ ВНИМАТЕЛЬНЫ К ВАШИМ МЫСЛЯМ,</p>
+                <p>ОНИ — НАЧАЛО ВАШИХ ПОСТУПКОВ»</p>
+                <p>ЛАО ДЗЫ</p>
             </div>
 
-
+            <div class="method_wrapper_third is-size-5-desktop is-centered">
+                <p class="psy_in_our_life__p">При данном подходе психотерапевт помогает вам обратиться к своему сознанию
+                    и
+                    освободиться от стереотипного,
+                    предвзятого, негибкого мышления, которое так или иначе влияет на настроение и поведение.</p>
+                <p class="psy_in_our_life__p">Психотерапевт не будет учить вас, как думать правильно, а как неправильно.
+                    Он
+                    будет направлять, помогая
+                    разобраться, что с вами происходит, как устроены ваши проблемы, какие мысли и действия приводят к их
+                    возникновению, как ваш тип мышления влияет на различные ситуации и жизненные сценарии.</p>
+                <p class="psy_in_our_life__p">В некоторых случаях, помимо работы с мышлением, целесообразно проводить
+                    так
+                    называемые поведенческие
+                    эксперименты, в ходе которых психотерапевт помогает переживать пугающие и болезненные для вас
+                    ситуации в
+                    реальном времени. Это бывает актуально при различных фобиях, когда вам необходима помощь в проверке
+                    своих
+                    гипотез об объекте страха.</p>
+                <p class="psy_in_our_life__p">
+                    Когнитивно-поведенческая терапия не преследует цель исключить все негативные мысли и переживания:
+                    очевидно,
+                    что они, так же как и позитивные, являются важной частью нашей жизни и помогают осознать
+                    потенциальные
+                    проблемы, требующие решения. Главная задача когнитивно-поведенческой терапии — избавиться от
+                    разрушительных
+                    убеждений и установок, которые могут мешать жить счастливо и реализовать себя так, как нам бы этого
+                    хотелось.
+                </p>
+            </div>
         </div>
-        <h5 class="method_wrapper_fourth__h5">
-            Несколько причин, по которым вам нужно выбрать именно когнитивно-поведенческий
-            подход в психотерапии:
-        </h5>
-
-        <ul class="method_first__list">
-            <li> вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;</li>
-            <li>вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть ощущение,
-                что вы двигаетесь по одному и тому же сценарию, и вас это не <span> устраивает; </li>
-            <li>вы уже давно размышляете о проблеме и чувствуете необходимость её решения;</li>
-            <li>вы любите думать и анализировать, вам нравится чёткость и ясность.</li>
-        </ul>
     </div>
+    <div class="method_wrapper_fourth columns is-size-5-desktop is-centered">
 
+        <div class="method_three_methods column">
+        </div>
+
+        <div class="method_three_methods_second column">
+            <h5 class="method_three_methods__h5 is-size-4-desktop  ">
+                Три основных принципа <br>
+                когнитивно-поведенческой психотерапии:
+            </h5>
+            <ul class="method_first__list">
+                <li>наши мысли влияют на наше поведение;</li>
+                <li>мы можем развить навык отслеживания мыслей и работать над их изменением;</li>
+                <li>изменив мышление, можно изменить что-либо в поведении. </li>
+            </ul>
+        </div>
+    </div>
+        <div class="columns wrapper_method_fifth is-size-5-desktop is-centered">
+            <div class="column">
+
+                <h5 class="method_wrapper_fourth__h5 is-size-4-desktop ">
+                    Несколько причин, по которым вам нужно выбрать именно когнитивно-поведенческий
+                    подход в психотерапии:
+                </h5>
+
+                <ul class="method_first__list is-size-5-desktop ">
+                    <li> вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;</li>
+                    <li>вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть
+                        ощущение,
+                        что вы двигаетесь по одному и тому же сценарию, и вас это не <span> устраивает; </li>
+                    <li>вы уже давно размышляете о проблеме и чувствуете необходимость её решения;</li>
+                    <li>вы любите думать и анализировать, вам нравится чёткость и ясность.</li>
+                </ul>
+            </div>
+        </div>
+   
     <!-- здесь заканчивается меняющийся контент -->
 
 
