--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -70,7 +70,7 @@
         <div class="column">
             <div class="wrapper_intro__img">
             </div>
-            <div class="wrapper_intro__text is-size-4">
+            <div class="wrapper_intro__text is-size-4-desktop is-center">
                 <p>Добрый день, я Наталья Чижикова, клинический психолог, психолог-консультант и психотерапевт. </p>
                 <p>Рада приветствовать вас на моем сайте, вместе мы сможем найти причину вашей проблемы, а главное –
                     решить
@@ -101,7 +101,7 @@
         </div>
     </div>
     <div class="column is-full">
-        <h2 class="wrapper_reasons_to_me__h2   has-text-centered">Причины, по которым вам имеет смысл обратиться именно
+        <h2 class="wrapper_reasons_to_me__h2 is-size-4-desktop   has-text-centered">Причины, по которым вам имеет смысл обратиться именно
             ко мне:</h2>
     </div>
     <div class="wrapper_reasons_to_me columns">
@@ -146,8 +146,7 @@
                 интересующий вас вопрос</h5>
         </div>
         <div class="columns main_form">
-            <div class="column is-1"></div>
-            <div class="field column  is-5">
+            <div class="field column is-5">
                 <form action="index.php" method="GET">
                     <div class="control has-icons-left input_first">
                         <input class="input is-medium" type="text" placeholder="Ваше имя" maxlength="15" required>
