--- a/alter_app/index.html
+++ b/alter_app/index.html
@@ -21,13 +21,13 @@
     <div class="columns">
         <div class="logo_header column is-full">
             <a href="index.html" class="logo_header__a">
-                <h2 class="logo_header__h2">Наталья Чижикова</h2>
+                <h2 class="logo_header__h2 is-size-4-desktop">Наталья Чижикова</h2>
             </a>
             <h1 class="logo_header__h1">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
         </div>
     </div>
     <!-- здесь начинается навигация -->
-    <div class="wrapper_nav">
+    <div class="wrapper_nav is-size-3">
         <nav class="navigation navbar " role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -39,7 +39,7 @@
             </div>
 
 
-            <div id="psy_nav" class="navbar-menu">
+            <div id="psy_nav" class="navbar-menu ">
 
                 <a href="about.html" class="navbar-item">
                     oбо мне
