--- a/alter_app/contacts.html
+++ b/alter_app/contacts.html
@@ -87,22 +87,20 @@
 
 
     <div class="second_part_one">
-        <h3 class="psy_in_our_life__h5  centr title is-centred is-4-desktop">
+        <h3 class="psy_in_our_life__h3  centr title is-centred is-4-desktop" >
             Формат консультаций
         </h3>
         <p class="psy_in_our_life__p psy_in_our_life__p__spec  centr subtitle">
             На данный момент я провожу консультации как очно, так и по Skype.
         </p>
-        <h5 class="psy_in_our_life__h5">
+        <h5 class="psy_in_our_life__h5 centr subtitle  psy_in_our_life__h5_second">
             Считаю ли я эффективной психотерапевтическую работу по Skype?
         </h5>
     </div>
-    <div class="second_contact columns">
-        <div class="second_contact__img column">
-            <img src="img/Kont_man_laptop.png" alt="">
-        </div>
+    <div class="second_contact  columns">
+        <div class="second_contact__img second_contact_lap column"></div>
 
-        <div class="second_part_second column">
+        <div class="second_part_second column is-size-6">
             <p class="psy_in_our_life__p">Психотерапия — процесс живого общения, однако в век технологий
                 и инноваций было бы глупо отказываться от возможности делать
                 привычные вещи в онлайн-формате.</p>
@@ -116,12 +114,12 @@
                 разным причинам) провести личную встречу — не преграда на пути
                 к осуществлению психологического консультирования.</p>
         </div>
-        <div class="second_contact__img column">
-            <img src="img/kont_girl_laptop.png" alt="консультация с психологом">
-        </div>
+        <div class="second_contact__img second_contact_girl  column"></div>
     </div>
-    <div class="kont_adress">
-        <h5 class="kont_adress__h5"> Кабинет на Красных Воротах </h5>
+
+    <div class="kont_adress columns">
+        <div class="column">
+        <h5 class="kont_adress__h5 centr title is-centred is-4-desktop"> Кабинет на Красных Воротах </h5>
         <p class="psy_in_our_life__p">Мы можем встретиться с вами в моём кабинете на Красных Воротах в предварительно
             оговорённое время. Это
             уютный кабинет, в котором вы точно будете чувствовать себя комфортно и безопасно.</p>
@@ -129,12 +127,14 @@
             Записаться на очную консультацию вы можете через форму ниже, а также по телефону или e-mail (указав в теме
             письма «консультация»).
         </p>
-        <div class="kont_adress__map">
-            <div class="kont_adress__map_wrap">
+    </div>
+</div>
+        <div class="kont_adress__map columns">
+            <div class="kont_adress__map_wrap column">
                 <iframe
                     src="https://yandex.ru/map-widget/v1/?um=constructor%3A39a350423f98fbc4417a6c1fff02949b752fa3d557f94b4a755f0324a7bce17d&amp;source=constructor"
-                    width="600" height="603" frameborder="0"></iframe></div>
-            <div class="kont_adress__map__text">
+                    width="600" height="703" frameborder="0"></iframe></div>
+            <div class="kont_adress__map__text column is-size-5-desktop">
                 <p class="psy_in_our_life__p">
                     Данный кабинет располагается в психологическом центре «Мастерская жизни» в 1-й минуте ходьбы от
                     станции метро Красные Ворота и в 4-х минутах пешком от станций метро Тургеневская, Чистые Пруды,
@@ -165,7 +165,7 @@
 
         </div>
 
-    </div>
+   
     <!-- здесь заканчивается меняющийся контент -->
 
 
