--- a/alter_app/psychotherapy.html
+++ b/alter_app/psychotherapy.html
@@ -21,7 +21,7 @@
     <div class="columns">
         <div class="logo_header column is-full">
             <a href="index.html" class="logo_header__a">
-                <h2 class="logo_header__h2">Наталья Чижикова</h2>
+                    <h2 class="logo_header__h2 is-size-4-desktop">Наталья Чижикова</h2>
             </a>
             <h1 class="logo_header__h1 is-size-5">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
         </div>
