--- a/alter_app/contacts.html
+++ b/alter_app/contacts.html
@@ -21,13 +21,12 @@
     <div class="columns">
         <div class="logo_header column is-full">
             <a href="index.html" class="logo_header__a">
-                <h2 class="logo_header__h2">Наталья Чижикова</h2>
-            </a>
+                    <h2 class="logo_header__h2 is-size-4-desktop">Наталья Чижикова</h2>            </a>
             <h1 class="logo_header__h1">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
         </div>
     </div>
     <!-- здесь начинается навигация -->
-    <div class="wrapper_nav is-size-3">
+    <div class="wrapper_nav is-size-4">
         <nav class="navigation navbar " role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
