--- a/alter_app/materials.html
+++ b/alter_app/materials.html
@@ -21,14 +21,14 @@
     <div class="columns">
         <div class="logo_header column is-full">
             <a href="index.html" class="logo_header__a">
-                <h2 class="logo_header__h2">Наталья Чижикова</h2>
+                <h2 class="logo_header__h2 is-size-4-desktop">Наталья Чижикова</h2>
             </a>
             <h1 class="logo_header__h1">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
         </div>
     </div>
     <!-- здесь начинается навигация -->
 
-    <div class="wrapper_nav">
+    <div class="wrapper_nav is-size-4">
         <nav class="navigation navbar " role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -78,23 +78,28 @@
     </div>
     <div class="depression_wrapper is-size-5-desktop column is-centered" id="depression " columns>
         <div class="column">
-        <h3 class="psy_in_our_life__h3 is-size-3-desktop is-centered title"> Депрессия</h3>
-        <p class="psy_in_our_life__p">Все мы не раз слышали (или сами говорили): «Я сегодня в депрессии». Культура
-            научила нас, что депрессия — это что-
-            то вроде сезонной хандры. Действительно, человеку свойственно расстраиваться и переживать из-за проблем на
-            работе, ссор с близкими, дефицита сна и отдыха, даже из-за погоды. Однако по завершении неприятных событий
-            состояние приходит в норму.</p>
-        <p class="psy_in_our_life__p">Депрессия же устроена по-другому: её причины могут быть скрыты в глубинах нашего
-            подсознания и не отражаться на
-            поверхности, а порой кажется, что их и вовсе нет. </p>
-        <p class="psy_in_our_life__p">Депрессия — словно чёрная дыра внутри человека, которая высасывает из него силы
-            работать, учиться, радоваться, а
-            в конечном итоге — жить. Она сильно влияет на жизнь, затрагивая все её сферы. В отличие от хандры или
-            подавленности, депрессия только в 40% случаев проходит сама, и то не полностью, нанося огромный урон
-            психике.</p>
+            <h3 class="psy_in_our_life__h3 is-size-3-desktop is-centered title"> Депрессия</h3>
+            <p class="psy_in_our_life__p">Все мы не раз слышали (или сами говорили): «Я сегодня в депрессии». Культура
+                научила нас, что депрессия — это что-
+                то вроде сезонной хандры. Действительно, человеку свойственно расстраиваться и переживать из-за проблем
+                на
+                работе, ссор с близкими, дефицита сна и отдыха, даже из-за погоды. Однако по завершении неприятных
+                событий
+                состояние приходит в норму.</p>
+            <p class="psy_in_our_life__p">Депрессия же устроена по-другому: её причины могут быть скрыты в глубинах
+                нашего
+                подсознания и не отражаться на
+                поверхности, а порой кажется, что их и вовсе нет. </p>
+            <p class="psy_in_our_life__p">Депрессия — словно чёрная дыра внутри человека, которая высасывает из него
+                силы
+                работать, учиться, радоваться, а
+                в конечном итоге — жить. Она сильно влияет на жизнь, затрагивая все её сферы. В отличие от хандры или
+                подавленности, депрессия только в 40% случаев проходит сама, и то не полностью, нанося огромный урон
+                психике.</p>
         </div>
 
-        <h5 class="psy_in_our_life__h3 sympo is-size-3-desktop is-centered title column is-full-desktop">Симптомы депрессии:</h5>
+        <h5 class="psy_in_our_life__h3 sympo is-size-3-desktop is-centered title column is-full-desktop">Симптомы
+            депрессии:</h5>
 
         <div class="wrapper_symptoms_depression columns">
 
@@ -144,130 +149,144 @@
 
     <div class="anxious_wrapper is-size-5-desktop column is-centered columns" id="anxious">
         <div class="column">
-        <h3 class="psy_in_our_life__h3 sympo is-size-3-desktop is-centered title column is-full-desktop"> Тревожные расстройства</h3>
-        <p class="psy_in_our_life__p">
-            Тревога — это здоровая реакция нашего организма на потенциальную опасность. Вполне естественно переживать
-            перед собеседованием или экзаменом, однако иногда волнение становится настолько устойчивым и болезненным,
-            что
-            может снижать качество жизни, мешая нормально работать, общаться, путешествовать, поддерживать отношения,
-            пользоваться транспортом, отдыхать в публичных местах.
-        </p>
-        <p class="psy_in_our_life__p">
-            Патологическая тревога — это не тоже самое, что волноваться из-за сданной не в срок работы и не боязнь
-            насекомых
-            за городом, а серьёзный недуг.
-        </p>
-        <p class="psy_in_our_life__p">
-            Как понять, что тревога приобрела патологический характер?
-        </p>
+            <h3 class="psy_in_our_life__h3 sympo is-size-3-desktop is-centered title column is-full-desktop"> Тревожные
+                расстройства</h3>
+            <p class="psy_in_our_life__p">
+                Тревога — это здоровая реакция нашего организма на потенциальную опасность. Вполне естественно
+                переживать
+                перед собеседованием или экзаменом, однако иногда волнение становится настолько устойчивым и
+                болезненным,
+                что
+                может снижать качество жизни, мешая нормально работать, общаться, путешествовать, поддерживать
+                отношения,
+                пользоваться транспортом, отдыхать в публичных местах.
+            </p>
+            <p class="psy_in_our_life__p">
+                Патологическая тревога — это не тоже самое, что волноваться из-за сданной не в срок работы и не боязнь
+                насекомых
+                за городом, а серьёзный недуг.
+            </p>
+            <p class="psy_in_our_life__p">
+                Как понять, что тревога приобрела патологический характер?
+            </p>
         </div>
     </div>
-        <h5 class="psy_in_our_life__h3  is-size-3-desktop is-centered title column is-full-desktop"> Есть ряд симптомов:</h5>
-   
-        
-        <div class="wrapper_symptoms_anxious columns is-size-5-desktop column is-centered ">
-            <ul class="method_first__list special_list column">
-                <li>периодическое ощущение, что должно произойти что-то ужасное и вы не в силах это предотвратить; </li>
-                <li> учащённое сердцебиение, чувство удушья, головокружение от беспокоящих мыслей; </li>
-                <li>навязчивые страхи, связанные с потерей близких, даже если на это нет никаких оснований; </li>
-                <li>одна или несколько изолированных фобий, социофобия; </li>
-                <li>страх смерти или ипохондрические мысли; </li>
-                <li>страх толпы или одиночества; </li>
-                <li>страх передвижения в транспорте; </li>
-                <li>страх покраснения; </li>
-                <li>навязчивые мысли, действия и т. д. </li>
-            </ul>
-            <div class="wrapper_sympotms_anxioux__image column"> </div>
-        </div>
-        <div class="wrapper_anx columns is-size-5-desktop column is-centered ">
-            <div class="column">
-        <h5 class="psy_in_our_life__h3  is-size-3-desktop is-centered title column is-full-desktop">В чём отличие тревоги от фобии и страха?</h5>
-        <p class="psy_in_our_life__p">
-            Страх — это конкретная эмоция, у которой всегда есть объект.
-            Тревога — эмоция более диффузная, она не имеет конкретного объекта.
-            Фобия — это стойкий и необоснованный страх перед определёнными предметами, людьми или животными,
-            действиями или ситуациями.
-        </p>
-        <p class="psy_in_our_life__p">
-            Люди, которые сталкивались с патологической тревогой, не понаслышке знают, как она может влиять на качество
-            жизни.
-        </p>
-        <p class="psy_in_our_life__p">
-            При этом 70% страдающих тревожными расстройствами не обращаются за помощью, и тревога беспокоит их годами,
-            становясь одним из наиболее истощающих личность заболеваний.
-        </p>
-        <p class="psy_in_our_life__p">
-            Хорошая новость в том, что тревога легко поддаётся лечению. Когнитивно-поведенческая психотерапия
-            неоднократно
-            доказывала свою эффективность в работе с тревожными расстройствами. КПТ предлагает не лекарственный подход,
-            а различные психологические методики и техники самопомощи, благодаря которым вы сможете забыть о своей
-            проблеме и жить нормальной здоровой жизнью.
-        </p>
+    <h5 class="psy_in_our_life__h3  is-size-3-desktop is-centered title column is-full-desktop"> Есть ряд симптомов:
+    </h5>
+
+
+    <div class="wrapper_symptoms_anxious columns is-size-5-desktop column is-centered ">
+        <ul class="method_first__list special_list column">
+            <li>периодическое ощущение, что должно произойти что-то ужасное и вы не в силах это предотвратить; </li>
+            <li> учащённое сердцебиение, чувство удушья, головокружение от беспокоящих мыслей; </li>
+            <li>навязчивые страхи, связанные с потерей близких, даже если на это нет никаких оснований; </li>
+            <li>одна или несколько изолированных фобий, социофобия; </li>
+            <li>страх смерти или ипохондрические мысли; </li>
+            <li>страх толпы или одиночества; </li>
+            <li>страх передвижения в транспорте; </li>
+            <li>страх покраснения; </li>
+            <li>навязчивые мысли, действия и т. д. </li>
+        </ul>
+        <div class="wrapper_sympotms_anxioux__image column"> </div>
     </div>
+    <div class="wrapper_anx columns is-size-5-desktop column is-centered ">
+        <div class="column">
+            <h5 class="psy_in_our_life__h3  is-size-3-desktop is-centered title column is-full-desktop">В чём отличие
+                тревоги от фобии и страха?</h5>
+            <p class="psy_in_our_life__p">
+                Страх — это конкретная эмоция, у которой всегда есть объект.
+                Тревога — эмоция более диффузная, она не имеет конкретного объекта.
+                Фобия — это стойкий и необоснованный страх перед определёнными предметами, людьми или животными,
+                действиями или ситуациями.
+            </p>
+            <p class="psy_in_our_life__p">
+                Люди, которые сталкивались с патологической тревогой, не понаслышке знают, как она может влиять на
+                качество
+                жизни.
+            </p>
+            <p class="psy_in_our_life__p">
+                При этом 70% страдающих тревожными расстройствами не обращаются за помощью, и тревога беспокоит их
+                годами,
+                становясь одним из наиболее истощающих личность заболеваний.
+            </p>
+            <p class="psy_in_our_life__p">
+                Хорошая новость в том, что тревога легко поддаётся лечению. Когнитивно-поведенческая психотерапия
+                неоднократно
+                доказывала свою эффективность в работе с тревожными расстройствами. КПТ предлагает не лекарственный
+                подход,
+                а различные психологические методики и техники самопомощи, благодаря которым вы сможете забыть о своей
+                проблеме и жить нормальной здоровой жизнью.
+            </p>
+        </div>
     </div>
     <div class="wrapper_panic columns is-size-5-desktop column is-centered  " id="panic">
         <div class="column">
-        <h3 class="psy_in_our_life__h3  is-size-3-desktop is-centered title column is-full-desktop"> Панические атаки</h3>
-        <p class="psy_in_our_life__p">
-            В последние годы такое явление современности, как паническая атака, стало регулярно освещаться в медиа.
-            Термин
-            на слуху и присутствует в лексиконе у каждого второго, друзья рассказывают про свои панические атаки —
-            волей-
-            неволей начинает казаться, что они есть и у вас.
-        </p>
-        <p class="psy_in_our_life__p">
-            Для начала давайте разберёмся в природе явления. Паническая атака — это приступ тревоги, связанный с тем,
-            что
-            происходит в вашем теле. Другими словами, это страх собственных ощущений.
-        </p>
-    </div>
-    </div>
-        <h5 class="psy_in_our_life__h3 sympo is-size-3-desktop is-centered title column is-full-desktop">При панической атаке вы можете чувствовать:</h5>
-    
-        <div class="wrapper_sympotms_panic  columns is-size-5-desktop column is-centered">
-            <ul class="method_first__list column ">
-                <li>недостаток кислорода;</li>
-                <li>учащённое, а иногда даже слишком сильное сердцебиение;</li>
-                <li>звон в ушах; </li>
-                <li>головокружение; </li>
-                <li>дрожь; </li>
-                <li>потливость;</li>
-                <li>озноб, жар и т. д.</li>
-            </ul>
-            <div class="wrapper_sympotms_panic__image column"> </div>
+            <h3 class="psy_in_our_life__h3  is-size-3-desktop is-centered title column is-full-desktop"> Панические
+                атаки</h3>
+            <p class="psy_in_our_life__p">
+                В последние годы такое явление современности, как паническая атака, стало регулярно освещаться в медиа.
+                Термин
+                на слуху и присутствует в лексиконе у каждого второго, друзья рассказывают про свои панические атаки —
+                волей-
+                неволей начинает казаться, что они есть и у вас.
+            </p>
+            <p class="psy_in_our_life__p">
+                Для начала давайте разберёмся в природе явления. Паническая атака — это приступ тревоги, связанный с
+                тем,
+                что
+                происходит в вашем теле. Другими словами, это страх собственных ощущений.
+            </p>
         </div>
-        <div class="wrapper_sympotms_panic  wrapper_sympotms_panic_spec  columns is-size-5-desktop column is-centered">
-            <div class="column">
-        <p class="psy_in_our_life__p">
-            Человеку при панических атаках кажется, что тело ему неподвластно: что он сейчас задохнётся, потеряет
-            контроль
-            над мочеиспусканием, что его стошнит. Некоторые люди думают, что у них начался сердечный приступ, припадок
-            или
-            что они сходят с ума.
-        </p>
-        <p class="psy_in_our_life__p">
-            Удивительно, но такие серьёзные симптомы могут быть вызваны исключительно психологическими причинами.
-            Панические атаки зачастую возникают из-за травмирующих событий или воспоминаний, из-за ситуаций, которые
-            требуют напряжения, а также триггеров, провоцирующих страхи и фобии.
-        </p>
-        <p class="psy_in_our_life__p">
-            Следствием панических атак может стать обессиливающий дуэт хронической тревоги и депрессии. Эти проблемы
-            способны мучить человека годами, а иногда и десятилетиями, привнося в его жизнь множество неудобств и
-            неприятных моментов.
-        </p>
-        <p class="psy_in_our_life__p">
-            Когнитивно-поведенческая психотерапия доказала свою эффективность в работе с паническими атаками и
-            предлагает
-            различные нелекарственные стратегии возвращения к здоровой жизни.
-        </p>
-        <p class="psy_in_our_life__p">
-            Столкнувшись с паническими атаками, в первую очередь следует пройти медицинское обследование, чтобы
-            исключить
-            кардиологические и неврологические причины. Если же с точки зрения физиологии поводов для беспокойства нет,
-            то
-            недуг вызван психологическим состоянием и вам необходима помощь специалиста.
-        </p>
     </div>
+    <h5 class="psy_in_our_life__h3 sympo is-size-3-desktop is-centered title column is-full-desktop">При панической
+        атаке вы можете чувствовать:</h5>
+
+    <div class="wrapper_sympotms_panic  columns is-size-5-desktop column is-centered">
+        <ul class="method_first__list column ">
+            <li>недостаток кислорода;</li>
+            <li>учащённое, а иногда даже слишком сильное сердцебиение;</li>
+            <li>звон в ушах; </li>
+            <li>головокружение; </li>
+            <li>дрожь; </li>
+            <li>потливость;</li>
+            <li>озноб, жар и т. д.</li>
+        </ul>
+        <div class="wrapper_sympotms_panic__image column"> </div>
+    </div>
+    <div class="wrapper_sympotms_panic  wrapper_sympotms_panic_spec  columns is-size-5-desktop column is-centered">
+        <div class="column">
+            <p class="psy_in_our_life__p">
+                Человеку при панических атаках кажется, что тело ему неподвластно: что он сейчас задохнётся, потеряет
+                контроль
+                над мочеиспусканием, что его стошнит. Некоторые люди думают, что у них начался сердечный приступ,
+                припадок
+                или
+                что они сходят с ума.
+            </p>
+            <p class="psy_in_our_life__p">
+                Удивительно, но такие серьёзные симптомы могут быть вызваны исключительно психологическими причинами.
+                Панические атаки зачастую возникают из-за травмирующих событий или воспоминаний, из-за ситуаций, которые
+                требуют напряжения, а также триггеров, провоцирующих страхи и фобии.
+            </p>
+            <p class="psy_in_our_life__p">
+                Следствием панических атак может стать обессиливающий дуэт хронической тревоги и депрессии. Эти проблемы
+                способны мучить человека годами, а иногда и десятилетиями, привнося в его жизнь множество неудобств и
+                неприятных моментов.
+            </p>
+            <p class="psy_in_our_life__p">
+                Когнитивно-поведенческая психотерапия доказала свою эффективность в работе с паническими атаками и
+                предлагает
+                различные нелекарственные стратегии возвращения к здоровой жизни.
+            </p>
+            <p class="psy_in_our_life__p">
+                Столкнувшись с паническими атаками, в первую очередь следует пройти медицинское обследование, чтобы
+                исключить
+                кардиологические и неврологические причины. Если же с точки зрения физиологии поводов для беспокойства
+                нет,
+                то
+                недуг вызван психологическим состоянием и вам необходима помощь специалиста.
+            </p>
+        </div>
     </div>
     <!-- </div>
     </div> -->
