--- a/alter_app/method.html
+++ b/alter_app/method.html
@@ -21,13 +21,13 @@
     <div class="columns">
         <div class="logo_header column is-full">
             <a href="index.html" class="logo_header__a">
-                <h2 class="logo_header__h2">Наталья Чижикова</h2>
+                <h2 class="logo_header__h2 is-size-4-desktop">Наталья Чижикова</h2>
             </a>
             <h1 class="logo_header__h1">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
         </div>
     </div>
     <!-- здесь начинается навигация -->
-    <div class="wrapper_nav">
+    <div class="wrapper_nav is-size-4">
         <nav class="navigation navbar " role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -155,25 +155,25 @@
             </ul>
         </div>
     </div>
-        <div class="columns wrapper_method_fifth is-size-5-desktop is-centered">
-            <div class="column">
+    <div class="columns wrapper_method_fifth is-size-5-desktop is-centered">
+        <div class="column">
 
-                <h5 class="method_wrapper_fourth__h5 is-size-4-desktop ">
-                    Несколько причин, по которым вам нужно выбрать именно когнитивно-поведенческий
-                    подход в психотерапии:
-                </h5>
+            <h5 class="method_wrapper_fourth__h5 is-size-4-desktop ">
+                Несколько причин, по которым вам нужно выбрать именно когнитивно-поведенческий
+                подход в психотерапии:
+            </h5>
 
-                <ul class="method_first__list is-size-5-desktop ">
-                    <li> вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;</li>
-                    <li>вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть
-                        ощущение,
-                        что вы двигаетесь по одному и тому же сценарию, и вас это не <span> устраивает; </li>
-                    <li>вы уже давно размышляете о проблеме и чувствуете необходимость её решения;</li>
-                    <li>вы любите думать и анализировать, вам нравится чёткость и ясность.</li>
-                </ul>
-            </div>
+            <ul class="method_first__list is-size-5-desktop ">
+                <li> вас что-то беспокоит, это продолжается некоторое время, и ситуация не меняется;</li>
+                <li>вы видите, что одна и та же ситуация повторяется с вами на разных жизненных этапах, у вас есть
+                    ощущение,
+                    что вы двигаетесь по одному и тому же сценарию, и вас это не <span> устраивает; </li>
+                <li>вы уже давно размышляете о проблеме и чувствуете необходимость её решения;</li>
+                <li>вы любите думать и анализировать, вам нравится чёткость и ясность.</li>
+            </ul>
         </div>
-   
+    </div>
+
     <!-- здесь заканчивается меняющийся контент -->
 
 
