--- a/alter_app/about.html
+++ b/alter_app/about.html
@@ -236,26 +236,29 @@
                 <span class="row_img__first__span">Получение квалификации «Магистр психологии»</span>
             </div>
         </div>
-        <div class="row_img row_img_second">
-            <div class="row_img__first">
-                <a href="img\od\lomonosov_2016.jpeg" class="psy_img"> <img src="img\od\lomonosov_2016.jpeg"
-                        alt="сертификат конференции"> </a>
+
+        <div class="row_img row_img_second columns">
+            <div class="row_img__first column is-centered">
+                <a href="img\od\lomonosov_2016.jpeg" class="psy_img">
+                    <div class="img_wp fr-7"></div>
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
                 <span class="row_img_first_mpgu">XXIV Международная научная конференция студентов, аспирантов и молодых
                     ученых «Ломоносов» (МГУ), 2017</span>
                 <span class="row_img__first__span">Сертификат участия в конференции</span>
             </div>
-            <div class="row_img__first">
-                <a href="img\od\lomosov-2017_sert.jpeg" class="psy_img"> <img src="img\od\lomosov-2017_sert.jpeg"
-                        alt="переквалификация"></a>
+            <div class="row_img__first column">
+                <a href="img\od\lomosov-2017_sert.jpeg" class="psy_img"> 
+                    <div class="img_wp fr-8"></div>
+
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
                 <span class="row_img_first_mpgu">XXIII Международная научная конференция студентов, аспирантов и молодых
                     ученых «Ломоносов» (МГУ), 2017</span>
                 <span class="row_img__first__span">Сертификат участия в конференции</span>
             </div>
-            <div class="row_img__first">
-                <a href="img\od\school_psyc.jpeg" class="psy_img"> <img src="img\od\school_psyc.jpeg"
-                        alt="диплом магистра"> </a>
+            <div class="row_img__first column">
+                <a href="img\od\school_psyc.jpeg" class="psy_img"> 
+                <div class="img_wp fr-9"></div>
+  
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
                 <span class="row_img_first_mpgu"> Всероссийский педагогический МАРАФОН учебных предметов </span>
                 <span class="row_img__first__span">Сертификат участника мастер-классов</span>
@@ -263,8 +266,9 @@
         </div>
         <div class="row_img_third row_img">
             <div class="row_img__the_third">
-                <a href="img\od\rpp.png" class="psy_img"><img src="img\od\rpp.png"
-                        alt="расстройства пищевого поведения"> </a>
+                <a href="img\od\rpp.png" class="psy_img">
+                    <div class="img_wp fr-10"></div>
+
                 <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
                 <span class="row_img_first_mpgu">Сухаревские чтения. Расстройства пищевого поведения у детей и
                     подростков</span>
