--- a/alter_app/about.html
+++ b/alter_app/about.html
@@ -281,28 +281,28 @@
 
     <div class="academic_wrapper">
         <h5>Психотерапевтическое образование</h5>
-        <div class="row_img">
-            <div class="row_img__first">
+        <div class="row_img columns">
+            <div class="row_img__first column">
                 <a href="img/kpt/dpdg.jpeg" class="psy_img"> <img src="img/kpt/dpdg.jpeg" alt=""></a>
                 <span class="row_img__first_span">ПОВЫШЕНИ КВАЛИФИКАЦИИ</span>
                 <span class="row_img_first_mpgu"> Десенсибилизация и переработка движениями глаз: введение в
                     метод</span>
                 <span class="row_img__first__span"> от Общероссийской психотерапевтической лиги</span>
             </div>
-            <div class="row_img__first">
+            <div class="row_img__first column">
                 <a href="img\kpt\kpt_1.jpeg" class="psy_img"> <img src="img\kpt\kpt_1.jpeg" alt=""> </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ</span>
                 <span class="row_img_first_mpgu">Основы когнитивно-поведенческой психотерапии</span>
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
             </div>
-            <div class="row_img__first">
+            <div class="row_img__first column">
                 <a href="img\kpt\kpt_1.jpeg" class="psy_img"> <img src="img\kpt\kpt_1.jpeg" alt=""> </a>
                 <span class="row_img__first_span">УЧАСТИЕ В СЕМИНАРЕ</span>
                 <span class="row_img_first_mpgu">Введение в терапию. Терапевтические отношения </span>
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
             </div>
         </div>
-        <div class="row_img row_img_second">
+        <div class="row_img row_img_second column">
             <div class="row_img__first">
                 <a href="img\kpt\kpt_3.jpeg" class="psy_img"> <img src="img\kpt\kpt_3.jpeg" alt=""> </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
@@ -310,14 +310,14 @@
                     убеждений в КПТ </span>
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии </span>
             </div>
-            <div class="row_img__first">
+            <div class="row_img__first column">
                 <a href="img\kpt\kpt_4.jpeg" class="psy_img"> <img src="img\kpt\kpt_4.jpeg"
                         alt=" Когнитивная терапия Аарона Бека "> </a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
                 <span class="row_img_first_mpgu"> Когнитивная терапия Аарона Бека </span>
                 <span class="row_img__first__span"> от Ассоциации когнитивно-поведенческой психотерапии</span>
             </div>
-            <div class="row_img__first">
+            <div class="row_img__first column">
                 <a href="img\kpt\kpt_5.jpeg" class="psy_img"> <img src="img\kpt\kpt_5.jpeg" alt="Альберт Эллис"></a>
                 <span class="row_img__first_span"> УЧАСТИЕ В СЕМИНАРЕ </span>
                 <span class="row_img_first_mpgu"> Основы рационально-эмотивно-поведенческой терапии Альберта
