--- a/alter_app/about.html
+++ b/alter_app/about.html
@@ -13,7 +13,6 @@
     <link rel="icon" type="image/png" href="img/favicon.png" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Serif|Playfair+Display" rel="stylesheet">
-    <link rel="stylesheet" href="css/mag.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.js" defer></script>
     <script src="js/mag.js" defer></script>
@@ -22,15 +21,15 @@
 
 <body>
     <div class="columns">
-        <div class="logo_header column is-full">
+        <div class="logo_header column">
             <a href="index.html" class="logo_header__a">
                 <h2 class="logo_header__h2 is-size-4-desktop">Наталья Чижикова</h2>
             </a>
-            <h1 class="logo_header__h1 is-size-5">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
+            <h1 class="logo_header__h1">КЛИНИЧЕСКИЙ ПСИХОЛОГ, ПСИХОЛОГ-КОНСУЛЬТАНТ, ПСИХОТЕРАПЕВТ</h1>
         </div>
     </div>
-    <div class="wrapper_nav">
-        <nav class="navigation navbar " role="navigation" aria-label="main navigation">
+    <div class="wrapper_nav is-size-4">
+        <nav class="navigation navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
                     data-target="psy_nav">
@@ -39,18 +38,33 @@
                     <span aria-hidden="true"></span>
                 </a>
             </div>
-            <div id="psy_nav" class="navbar-menu is-size-5-desktop">
-                <a href="about.html" class="navbar-item">oбо мне</a>
-                <a href="psychotherapy.html" class="navbar-item">о психотерапии</a>
-                <a href="method.html" class="navbar-item">о подходе</a>
-                <a href="materials.html" class="navbar-item">полезные материалы</a>
-                <a href="contacts.html" class="navbar-item">контакты</a>
+            <div id="psy_nav" class="navbar-menu ">
+                <a href="index.html" class="navbar-item">
+                    главная
+                </a>
+                <a href="about.html" class="navbar-item">
+                    oбо мне
+                </a>
+                <a href="psychotherapy.html" class="navbar-item">
+                    о психотерапии
+                </a>
+
+                <a href="method.html" class="navbar-item">
+                    о подходе
+                </a>
+                <a href="materials.html" class="navbar-item">
+                    полезные материалы
+                </a>
+                <a href="contacts.html" class="navbar-item">
+                    контакты
+                </a>
             </div>
+        </nav>
     </div>
-    </nav>
-    </div>
+
+    <!-- здесь начинается меняющийся контент -->
     <div class="wrapper_about_me_first is-size-5-desktop is-centered">
-        <h2 class="wrapper_about_me__h2 centr title is-centred is-4-desktop">Обо мне</h2>
+        <h2 class="psy_in_our_life__h3 title">Обо мне</h2>
         <p class="psy_in_our_life__p">
             В данный момент я веду частную практику, работаю как клинический психолог и психотерапевт. В своей работе я
             использую
@@ -75,7 +89,8 @@
             насколько
             это вообще возможно.
         </p>
-        <h2 class="wrapper_about_me__h2">Мое образование</h2>
+
+        <h2 class="psy_in_our_life__h3 psy_in_our_life__h3_spec title s">Мое образование</h2>
         <p class="psy_in_our_life__p">
             Получила двойное психологическое образование: степень специалиста по направлению «Клиническая психология» в
             РНИМУ им. Н. И. Пирогова и степень бакалавра психологии по направлению «Социальная психология» в МПГУ (бывш.
@@ -111,74 +126,67 @@
     <div class="academic_information columns is-size-5-desktop is-centered">
         <div class="academic_information_first_column column">
             <h6 class="academic__h6 h6_first centr title is-centred is-4-desktop">Академическое образование</h6>
-            <div class="academic__img">
-                <a href="img/about_diplom_bachelor-min.png" class="psy_img">
-                    <div class="img_wp fr-01"></div>
-                </a>
-            </div>
-            <div class="academic__img">
-                <a href="img/rnimy_big.jpeg" class="psy_img">
-                    <div class="img_wp fr-02"></div>
-                </a>
-            </div>
-            <div class="academic__img">
-                <a href="img/magister_big.jpeg" class="psy_img">
-                    <div class="img_wp fr-03"></div>
-                </a>
-            </div>
             <p class="academic__p">
-                <span class="academic_span">2016</span>
+                <span class="academic_span is-size-4">2016</span>
                 — МПГУ (бывш. МГПИ им. В. И. Ленина),
                 специальность «Социальная психология»,
                 (квалификация психолог)
             </p>
-            <p class="academic__p"><span class="academic_span">2017</span>— РНИМУ им. Н. И. Пирогова,
+            <p class="academic__p"><span class="academic_span is-size-4">2017</span>— РНИМУ им. Н. И. Пирогова,
                 специальность «Клиническая психология»,
                 (квалификация клинический психолог)</p>
-            <p class="academic__p"><span class="academic_span">2018</span>— МПГУ (бывш. МГПИ им. В. И. Ленина),
+            <p class="academic__p"><span class="academic_span is-size-4">2018</span>— МПГУ (бывш. МГПИ им. В. И. Ленина),
                 специальность «Организационная психология»,
                 (квалификация магистр психологии)</p>
-        </div>
-        <div class="academic_infromation_second_column column">
-            <p class="academic__p"><span class="academic_span title">2016 </span>— участник проекта «Студенческая наука»
+            <p class="academic__p"><span class="academic_spanis-size-4">2016 </span>— участник проекта «Студенческая наука»
                 (2016)</p>
-            <p class="academic__p"><span class="academic_span title">2016 - 2017</span>— участник Международной научной
+            <p class="academic__p"><span class="academic_span is-size-4">2016 - 2017</span>— участник Международной научной
                 конференции студентов, аспирантов и молодых учёных «Ломоносов-2017» (МГУ)</p>
-            <p class="academic__p"><span class="academic_span title">2016 - н. вр. </span>— участник ежегодных научных
+            <p class="academic__p"><span class="academic_span is-size-4">2016 - н. вр. </span>— участник ежегодных научных
                 конференций МПГУ (бывш. МГПИ им. В. И. Ленина), РНИМУ им. Н. И. Пирогова</p>
+                
+        </div>
+        
+        <div class="academic_infromation_second_column column">
+
             <h6 class="academic__h6 title centr">Психотерапевтическое образование</h6>
             <p class="academic__p">
-                <span_academic_span>2017</span_academic_span>
+                <span class="academic_span is-size-4"> 2017 </span>
                 — Общероссийская профессиональная психотерапевтическая лига, Базовый курс ДПДГ-терапии — 36 часов
             </p>
             <p class="academic__p">
-                <span_academic_span> 2018 </span_academic_span>
+                <span class="academic_span is-size-4">2018 </span>>
                 — Ассоциация когнитивно-поведенческой психотерапии, курс CBT - терапии Дмитрия Викторовича Ковпака — 200
                 часов
             </p>
             <p class="academic__p">
-                <span_academic_span>2018 - н. вр.</span_academic_span>
+                <span class="academic_span is-size-4">2018 - н. вр.</span>>
                 — участие в групповых очных интервизиях в Ассоциации когнитивно-поведенческой психотерапии — 25 часов
             </p>
             <p class="academic__p">
-                <span_academic_span>2018 - н. вр.</span_academic_span>
+                <span class="academic_span is-size-4">2018 - н. вр.</span>>
                 — участие в групповых и индивидуальных супервизиях у Дмитрия Викторовича Ковпака — 20 часов
             </p>
             <p class="academic__p">
-                <span_academic_span>2018 - н. вр. </span_academic_span>
+                <span class="academic_span is-size-4">2018 - н. вр. </span>>
                 — участие в ежегодных конференциях Ассоциации когнитивно-поведенческой психотерапии — 100 часов
             </p>
-            <h6 class="academic__h6">Индивидуальный психотерапевтический опыт</h6>
-            <p class="academic__p"><span class="academic_span">2016 - н. вр.</span>— личная психотерапия у Бурно Антона
+
+        </div>
+
+    </div>
+    <div class="columns is-size-5-desktop is-centered academic_information has-text-centered-desktop">
+        <div class="column">
+            <h6 class="academic__h6 title">Индивидуальный психотерапевтический опыт</h6>
+            <p class="academic__p"><span class="academic_span is-size-4">2016 - н. вр.</span>— личная психотерапия у Бурно Антона
                 Марковича (почётный член Ассоциации когнитивно-
                 поведенческой психотерапии, руководитель модальности
                 «Дифференциальная психотерапия» в Общероссийской
                 профессиональной психотерапевтической лиге).</p>
-            <h6 class="academic__h6">Клиентская практика</h6>
-            <p class="academic__p"><span class="academic_span">с 2018</span>— индивидуальные очные и скайп (Skype)
+            <h6 class="academic__h6_spec title">Клиентская практика</h6>
+            <p class="academic__p is-size-4"><span class="academic_span">с 2018</span>— индивидуальные очные и скайп (Skype)
                 консультации для взрослых</p>
         </div>
-
     </div>
     <div class="academic_wrapper">
 
@@ -249,20 +257,21 @@
                 <a href="img\od\lomonosov_2016.jpeg" class="psy_img">
                     <div class="img_wp fr-7"></div>
                 </a>
-                    <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
-                    <span class="row_img_first_mpgu">XXIV Международная научная конференция студентов, аспирантов и
-                        молодых
-                        ученых «Ломоносов» (МГУ), 2017</span>
-                    <span class="row_img__first__span">Сертификат участия в конференции</span>
+                <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
+                <span class="row_img_first_mpgu">XXIV Международная научная конференция студентов, аспирантов и
+                    молодых
+                    ученых «Ломоносов» (МГУ), 2017</span>
+                <span class="row_img__first__span">Сертификат участия в конференции</span>
             </div>
             <div class="row_img__first column">
                 <a href="img\od\lomosov-2017_sert.jpeg" class="psy_img">
-                    <div class="img_wp fr-8"></div> </a>
-                    <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
-                    <span class="row_img_first_mpgu">XXIII Международная научная конференция студентов, аспирантов и
-                        молодых
-                        ученых «Ломоносов» (МГУ), 2017</span>
-                    <span class="row_img__first__span">Сертификат участия в конференции</span> 
+                    <div class="img_wp fr-8"></div>
+                </a>
+                <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
+                <span class="row_img_first_mpgu">XXIII Международная научная конференция студентов, аспирантов и
+                    молодых
+                    ученых «Ломоносов» (МГУ), 2017</span>
+                <span class="row_img__first__span">Сертификат участия в конференции</span>
             </div>
             <div class="row_img__first column">
                 <a href="img\od\school_psyc.jpeg" class="psy_img">
@@ -276,20 +285,21 @@
         <div class="row_img columns">
             <div class="row_img__first column is-one-third">
                 <a href="img\od\rpp.png" class="psy_img">
-                    <div class="img_wp fr-10"></div> </a>
+                    <div class="img_wp fr-10"></div>
+                </a>
 
-                    <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
-                    <span class="row_img_first_mpgu">Сухаревские чтения. Расстройства пищевого поведения у детей и
-                        подростков</span>
-                    <span class="row_img__first__span">Сертификат участия в конференции </span>
+                <span class="row_img__first__span">УЧАСТИЕ В КОНФЕРЕНЦИИ</span>
+                <span class="row_img_first_mpgu">Сухаревские чтения. Расстройства пищевого поведения у детей и
+                    подростков</span>
+                <span class="row_img__first__span">Сертификат участия в конференции </span>
             </div>
 
         </div>
     </div>
 
-
     <div class="academic_wrapper">
         <h5 class="academic__h6  centr title is-centred is-4-desktop">Психотерапевтическое образование</h5>
+        <h6 class="academic__h6 h6_first centr subtitle is-centred is-4-desktop">Базовое образование</h6>
         <div class="row_img columns">
             <div class="row_img__first column">
                 <a href="img/kpt/dpdg.jpeg" class="psy_img">
@@ -442,7 +452,7 @@
                 <p>All Rights Reserved</p>
             </div>
 
-            <div class="social_icons column">
+            <div class="social_icons column is-full">
                 <a href="mailto:n.chizhikova25@gmail.com"> <img src="img/footer_envelope.png" alt="письмо"></a>
                 <a href="https://t-do.ru/NataliaChizhikova"> <img src="img/footer_telegram.png" alt="telegram"></a>
                 <a href="https://www.facebook.com/profile.php?id=100001813093691"> <img
