--- a/alter_app/about.html
+++ b/alter_app/about.html
@@ -188,7 +188,7 @@
                 консультации для взрослых</p>
         </div>
     </div>
-    <div class="academic_wrapper">
+    <div class="academic_wrapper" >
 
         <h5 class="title centr academic_wrapper_h5">Дипломы и сертификаты</h5>
         <h6 class="academic__h6 h6_first centr subtitle is-centred is-4-desktop">Базовое образование</h6>
@@ -221,7 +221,7 @@
     </div>
 
 
-    <div class="academic_wrapper is-size-6-desktop">
+    <div class="academic_wrapper  is-size-6-desktop">
         <h6 class="academic__h6 h6_first centr title is-centred is-4-desktop">Участие в конференциях</h6>
         <div class="row_img columns">
             <div class="row_img__first column">
@@ -297,7 +297,7 @@
         </div>
     </div>
 
-    <div class="academic_wrapper">
+    <div class="academic_wrapper academic_wrapper_last ">
         <h5 class="academic__h6  centr title is-centred is-4-desktop">Психотерапевтическое образование</h5>
         <h6 class="academic__h6 h6_first centr subtitle is-centred is-4-desktop">Базовое образование</h6>
         <div class="row_img columns">
@@ -405,6 +405,9 @@
 
     </div>
 
+
+
+<!-- здесь заканчивается меняющийся контент -->
     <footer>
         <div class="wrap_footer_head column is-full">
             <h3 class="wrap_footer_head_h3 title has-text-centered">Форма обратной связи</h3>
@@ -434,8 +437,7 @@
                         </span>
                     </div>
             </div>
-            <!-- <div class="is-one-fifth column"></div> -->
-            <div class="column is-5 ">
+            <div class="column is-5">
                 <textarea class="textarea is-medium" name="message" id="texta" rows="6" cols="40"
                     placeholder="Тема обращения" required></textarea>
                 <input type="submit" class="button is-primary is-pulled-right" value="Отправить">
