--- a/alter_app/contacts.html
+++ b/alter_app/contacts.html
@@ -64,7 +64,7 @@
 
     <div class="first_contact columns is-size-5-desktop is-centered">
         <div class="column">
-            <h3 class="psy_in_our_life__h5  centr title is-centred is-4-desktop">Как проходит первый сеанс?</h3>
+            <h3 class="psy_in_our_life__h3 psy_in_our_life__h3_cont  is-size-3-desktop is-centered title column">Как проходит первый сеанс?</h3>
             <p class="psy_in_our_life__p">
                 Первая встреча — это всегда знакомство. Обычно я рекомендую новым клиентам перед первой встречей
                 подумать,
@@ -88,14 +88,14 @@
         <p class="psy_in_our_life__p psy_in_our_life__p__spec  centr subtitle">
             На данный момент я провожу консультации как очно, так и по Skype.
         </p>
-        <h5 class="psy_in_our_life__h5 centr subtitle  psy_in_our_life__h5_second">
+        <h5 class="psy_in_our_life__p centr subtitle  psy_in_our_life__h5_second">
             Считаю ли я эффективной психотерапевтическую работу по Skype?
         </h5>
     </div>
     <div class="second_contact  columns">
-        <div class="second_contact__img second_contact_lap column"></div>
+        <div class="second_contact__img second_contact_lap column "></div>
 
-        <div class="second_part_second column is-size-6">
+        <div class="second_part_second column is-size-5 is-half">
             <p class="psy_in_our_life__p">Психотерапия — процесс живого общения, однако в век технологий
                 и инноваций было бы глупо отказываться от возможности делать
                 привычные вещи в онлайн-формате.</p>
@@ -112,10 +112,10 @@
         <div class="second_contact__img second_contact_girl  column"></div>
     </div>
 
-    <div class="kont_adress columns">
-        <div class="column">
+    <div class="kont_adress columns ">
+        <div class="column is-size-5-desktop">
         <h5 class="kont_adress__h5 centr title is-centred is-4-desktop"> Кабинет на Красных Воротах </h5>
-        <p class="psy_in_our_life__p">Мы можем встретиться с вами в моём кабинете на Красных Воротах в предварительно
+        <p class="psy_in_our_life__p ">Мы можем встретиться с вами в моём кабинете на Красных Воротах в предварительно
             оговорённое время. Это
             уютный кабинет, в котором вы точно будете чувствовать себя комфортно и безопасно.</p>
         <p class="psy_in_our_life__p">
@@ -125,10 +125,10 @@
     </div>
 </div>
         <div class="kont_adress__map columns">
-            <div class="kont_adress__map_wrap column">
+            <div class="kont_adress__map_wrap column ">
                 <iframe
                     src="https://yandex.ru/map-widget/v1/?um=constructor%3A39a350423f98fbc4417a6c1fff02949b752fa3d557f94b4a755f0324a7bce17d&amp;source=constructor"
-                    width="600" height="703" frameborder="0"></iframe></div>
+                    width="400" height="503" frameborder="0"></iframe></div>
             <div class="kont_adress__map__text column is-size-5-desktop">
                 <p class="psy_in_our_life__p">
                     Данный кабинет располагается в психологическом центре «Мастерская жизни» в 1-й минуте ходьбы от
@@ -142,18 +142,18 @@
                     поручнями, ведущую на второй этаж. Вам необходимо подняться до конца лестницы и войти в здание.
                     Далее поднимитесь на один лестничный пролет, до белой двери с нашей табличкой.
                 </p>
-                <div class="conts">
+                <div class="conts is-size-4">
                     <div class="conts_wrap"> <span class="conts__span">Телефон</span>
-                        <p class="conts__p">+7 965 104 06 07</p>
+                        +7 965 104 06 07
                     </div>
                     <div class="conts_wrap"> <span class="conts__span">E-mail:</span>
-                        <p class="conts__p">n.chizhikova25@gmail.com</p>
+                        n.chizhikova25@gmail.com
                     </div>
                     <div class="conts_wrap"> <span class="conts__span">Время работы:</span>
-                        <p class="conts__p">ежедневно, с 11:00 до 21:00</p>
+                       >ежедневно, с 11:00 до 21:00
                     </div>
                     <div class="conts_wrap"> <span class="conts__span">Координаты для навигатора: </span>
-                        <p class="conts__p">55.768248, 37.644746</p>
+                       55.768248, 37.644746
                     </div>
                 </div>
             </div>
