--- a/alter_app/method.html
+++ b/alter_app/method.html
@@ -140,12 +140,12 @@
         <div class="method_three_methods column">
         </div>
 
-        <div class="method_three_methods_second column">
-            <h5 class="method_three_methods__h5 is-size-4-desktop  ">
+        <div class="method_three_methods_second column is-text-left">
+            <h5 class="method_three_methods__h5 is-size-4 desktop  ">
                 Три основных принципа <br>
                 когнитивно-поведенческой психотерапии:
             </h5>
-            <ul class="method_first__list">
+            <ul class="method_first__list is-size-4 ">
                 <li>наши мысли влияют на наше поведение;</li>
                 <li>мы можем развить навык отслеживания мыслей и работать над их изменением;</li>
                 <li>изменив мышление, можно изменить что-либо в поведении. </li>
