--- a/alter_app/psychotherapy.html
+++ b/alter_app/psychotherapy.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="сайт психолога Натальи Чижиковой">
-    <meta name="keywords" content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
+    <meta name="keywords"
+        content="Психология, психолог, психолог Москва, психолог по Скайпу, психология отношений, психотерапия, психотерапевт Москва, психотерапевт по Скайпу, когнитивно-поведенческая психотерапия, когнитивно-поведенческий психотерапевт, cbt-терапевт, экзистенциальный психотерапевт, тревога, депрессия, панические атаки, любовная зависимость, клинический психолог, клиническая психология, психологическое консультирование, смысл жизни, ассертивность, фобия, аэрофобия, социофобия, клаустрофобия">
     <meta name="author" content="Наталья Чижикова">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,6 +18,7 @@
     <script src="js/mag.js" defer></script>
     <script src="js/code.js" defer></script>
 </head>
+
 <body>
     <div class="columns">
         <div class="logo_header column">
@@ -28,7 +31,8 @@
     <div class="wrapper_nav is-size-4">
         <nav class="navigation navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="psy_nav">
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                    data-target="psy_nav">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
@@ -57,15 +61,15 @@
             </div>
         </nav>
     </div>
-    
+
 
 
 
 
     <!-- здесь начинается меняющийся контент -->
-    <div class="columns">
+    <div class="columns psy_first_wrapper">
 
-        <div class="psy_first_wrapper is-size-4-desktop column is-centered">
+        <div class=" is-size-5-desktop column is-centered">
             <h3 class="psy_in_our_life__h3 title">Психотерапия в нашей жизни</h3>
             <p class="psy_in_our_life__p">
                 Современное российское общество устроено парадоксально. У нас принято обсуждать свою «несчастную долю»
@@ -115,7 +119,8 @@
             </p>
         </div>
     </div>
-    <div class="psy_second_wrapper is-size-4-desktop column is-centered">
+        <div class="columns psy_first_wrapper">
+    <div class="is-size-5-desktop column is-centered">
         <h3 class="psy_in_our_life__h3 title">Кто же такой психотерапевт? </h3>
         <p class="psy_in_our_life__p">
             Психотерапевт — это человек, который долго учился, чтобы помогать людям справляться со своими негативными (и
@@ -143,8 +148,10 @@
         </p>
         <!-- здесь индивидуальная часть сайта заканчивается -->
     </div>
-    <div class="psy_third_wrapper">
-    </div>
+
+</div>
+
+    <div class="psy_third_wrapper"></div>
 
 
 
